[tool.poetry]
name = "montecarlo-simulation"
version = "0.1.0"
description = ""
authors = ["Sina <sina@shoppar.com>"]
readme = "README.md"
packages = [{include = "montecarlo_simulation"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
