[tool.poetry]
name = "montecarlo-simulation"
version = "0.1.0"
description = ""
authors = ["Sina <sina@shoppar.com>"]
readme = "README.md"
packages = [{include = "montecarlo_simulation"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.2"
fitter = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
